# oxabl

./: .gitattributes  CLAUDE.md  Cargo.toml  NEXT_STATEMENT_PHASES.md  NEXT_STEPS.md  README.md  TODO.md  atoms_snippet.rs
.github/workflows/: codspeed.yml
crates/oxabl/: Cargo.toml
crates/oxabl/src/: lib.rs
crates/oxabl_ast/: Cargo.toml
crates/oxabl_ast/src/: expression.rs  lib.rs  literal.rs  span.rs  statement.rs
crates/oxabl_codegen/: Cargo.toml
crates/oxabl_codegen/src/: main.rs
crates/oxabl_common/: Cargo.toml
crates/oxabl_common/src/: lib.rs  source_map.rs
crates/oxabl_lexer/: Cargo.toml  build.rs
crates/oxabl_lexer/benches/: lexer_bench.rs
crates/oxabl_lexer/examples/: dump_tokens.rs
crates/oxabl_lexer/src/: callable.rs  kind.rs  lib.rs
crates/oxabl_parser/: Cargo.toml
crates/oxabl_parser/src/: lib.rs  literal.rs  parser.rs
crates/oxabl_parser/src/parser/: expressions.rs  mod.rs  statements.rs  tests.rs
resources/: abl_keyword_index.html  abl_keyword_index.json  bench_keywords.abl  keyword_overrides.toml
