[package]
name = "oxabl_lexer"
version = "0.1.0"
edition = "2024"

[dependencies]
rust_decimal = "1.40.0"
string_cache = "0.9.0"

[dev-dependencies]
criterion = { version = "4.3.0", package = "codspeed-criterion-compat" }
oxabl_common = {path = "../oxabl_common" }

[build-dependencies]
string_cache_codegen = "0.6"

[[bench]]
name = "lexer_bench"
harness = false
